--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="facebook_app_id">2006691912969809</string>
     <string name="fb_login_protocol_scheme">fb2006691912969809</string>
     <string name="profile_image">Profile image</string>
+    <string name="user_name">User Name</string>
+    <string name="profile_email">User E-mail</string>
 </resources>
